# ReconAI

./: .gitignore  Makefile  README.md  docker-compose.yml  goal_phase2.md  goal_phase4.md  goal_phase5.md  goal_phase6.md  goal_phase7.md  plan.md
.github/workflows/: ci.yml
agent/: pyproject.toml
agent/reconai/: agent.py  eval.py  models.py  rules.py  runner.py  tools.py
agent/tests/: test_models.py  test_placeholder.py  test_rules.py  test_runner.py
benchmarks/: METRICS.md  agent_eval_llm.json  agent_eval_rules.json  run_bench.sh
dashboard/: index.html  package-lock.json  package.json
dashboard/src/: AgentReport.tsx  App.tsx  BatchSummary.tsx  BreakQueue.tsx  api.ts
docs/: architecture.md  demo-script.md
engine/: Dockerfile  pom.xml
engine/src/main/java/com/reconai/: ReconAiApplication.java
engine/src/main/java/com/reconai/breaks/: BreakController.java  BreakRepository.java  ReconBreak.java
engine/src/main/java/com/reconai/config/: OpenApiConfig.java
engine/src/main/java/com/reconai/eval/: EvalController.java
engine/src/main/java/com/reconai/groundtruth/: GroundTruth.java  GroundTruthRepository.java
engine/src/main/java/com/reconai/ingest/: IngestionService.java
engine/src/main/java/com/reconai/matching/: JaroWinkler.java  MatchingService.java  PassStatDto.java  ReconcileResult.java
engine/src/main/resources/: application.yml
engine/src/main/resources/db/migration/: V1__ledger_schema.sql  V2__recon_schema.sql  V3__matching_schema.sql  V4__workflow_schema.sql
engine/src/test/resources/: application-integration.yml
(+38 files in other folders)
