[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reconai-agent"
version = "0.1.0"
description = "ReconAI LangGraph break-investigation agent"
requires-python = ">=3.11"
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["reconai"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
llm = [
    "langgraph>=0.2",
    "httpx>=0.27",
    "pydantic>=2.0",
    "anthropic>=0.34",
    "openai>=1.40",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
