[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reconai-agent"
version = "0.1.0"
description = "ReconAI LangGraph break-investigation agent"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2",
    "langchain-openai>=0.1",
    "httpx>=0.27",
    "pydantic>=2.0",
    "openai>=1.40",
    "python-dotenv>=1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["reconai"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
